# pymaterials-manager

./: .codespellrc  .gitignore  .pre-commit-config.yaml  AUTHORS  CONTRIBUTING.md  CONTRIBUTORS.md  README.rst  codecov.yml  index.html  linear_elastic_material.xml  pyproject.toml  robots.txt  sitemap.xml  tox.ini  versions.json
.github/: dependabot.yml
.github/workflows/: ci_cd.yml  dependabot_approve.yml  label.yml
doc/: .vale.ini
doc/source/: conf.py  developer_guide.rst  index.rst
examples/: demo.py  manager_example.py  trial.py  trial_gil.py  trial_visitor.py
examples/data/: MatML_unittest_variable_elasticity.xml  MatML_unittest_voce_isotropic_hardening.xml  material_isotropic.xml  material_isotropic_GIL.xml  template1.xml
tests/: conftest.py  test_materials.py
tests/common/: test_dependent_parameter.py  test_independent_parameter.py  test_interpolation_options.py  test_material_model.py
tests/data/: MatML_unittest_density.xml  MatML_unittest_elasticity.xml  MatML_unittest_hill_yield.xml  MatML_unittest_hill_yield_creep.xml  MatML_unittest_instantaneous_thermal_coeffs.xml  MatML_unittest_larc.xml  MatML_unittest_multilinear_isotropic_hardening.xml  MatML_unittest_puck_for_woven.xml  MatML_unittest_specific_heat.xml  MatML_unittest_speed_of_sound.xml  MatML_unittest_strain_limit.xml  MatML_unittest_thermal_coeffs.xml  MatML_unittest_thermal_conductivity.xml  MatML_unittest_tsai_wu.xml  MatML_unittest_usermat.xml  MatML_unittest_voce_isotropic_hardening.xml  anisotropic_elasticity.txt  cte_isotropic.txt  cte_orthotropic_metadata.txt  cte_orthotropic_variable.txt  fabric_fiber_angle_variable.txt  hill_yield.txt  hill_yield_variable.txt  isotropic_elasticity_metadata.txt  isotropic_elasticity_variable.txt  isotropic_hardening_multilinear_metadata.txt  larc_variable.txt  mapdl_coefficient_of_thermal_expansion_isotropic_secant_constant.cdb  mapdl_coefficient_of_thermal_expansion_isotropic_secant_constant_ref_temp.cdb  mapdl_coefficient_of_thermal_expansion_isotropic_secant_variable.cdb  mapdl_coefficient_of_thermal_expansion_isotropic_secant_variable_a11_a22.cdb  mapdl_coefficient_of_thermal_expansion_orthotropic_secant_constant.cdb  mapdl_coefficient_of_thermal_expansion_orthotropic_secant_constant_ref_temp.cdb  mapdl_coefficient_of_thermal_expansion_orthotropic_secant_variable.cdb  mapdl_coefficient_of_thermal_expansion_orthotropic_secant_variable_a11_a22.cdb  mapdl_density_a11_a22.cdb  mapdl_density_a11_a22_temp.cdb  mapdl_density_a11_a22_temp_interp.cdb  mapdl_density_constant.cdb  mapdl_density_variable_1.cdb  (+128 more)
tests/dpf_gil/: test_query_material.py
tests/fluent/: test_density_fluent.py  (+2 more)
version/: index.html
(+656 files in other folders)
