[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ansys-materials-manager"
version = "0.3.0"
description = "Python package to unify material management across the ansys portfolio"
authors = [{ name = "ANSYS, Inc.", email = "ansys.support@ansys.com" }]
requires-python = ">=3.11,<3.15"
readme = "README.rst"
license = "MIT"
maintainers = [{ name = "PyAnsys developers", email = "pyansys.core@ansys.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=1.24,<3",
    "ansys-units>=0.8.dev0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
grantami = [
    "httpx>=0.27",
    "msal>=1.28",
]
interpolation = [
    "ansys-dpf-core",
]
integrations = [
    "ansys-dyna-core>=0.9.0",
    "ansys-mapdl-core>=0.68",
    "ansys-fluent-core>=0.28",
]

[project.urls]
Repository = "https://github.com/ansys/pymaterials-manager"
Documentation = "https://manager.materials.docs.pyansys.com"

[dependency-groups]
doc = [
    "ansys-sphinx-theme>=0.12",
    "numpydoc>=1.9.0,<2",
    "Sphinx>=7.2,<9.0",
    "sphinx-autoapi>=3.0,<4",
    "sphinx-copybutton==0.5.2",
    "sphinx-jinja>=2.0.2,<3",
    "sphinx-design>=0.6.0,<0.8",
]
dev = [
    "pytest>=7.3,<10.0",
    "pytest-httpx>=0.35",
    "coolprop>=6.4.1,<9.0.0",
    "ansys-mapdl-core>=0.68",
    "ansys-fluent-core>=0.28",
    "twine>=4.0.2",
    "pytest-cov>=4",
    "pre-commit>=3.2.2",
    "ansys-dyna-core>=0.9.0",
    "httpx>=0.27",
    "msal>=1.28",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ansys"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.materials"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
markers = [
    "mapdl_integration: tests requiring a running instance of MAPDL",
    "dpf_gil_integration: tests requiring a running DPF GIL server",
]
addopts = [
    "-m", "not mapdl_integration and not dpf_gil_integration",
    "--cov=ansys.materials",
    "--cov-report=term",
    "--cov-report=xml:.cov/xml",
    "--cov-report=html:.cov/html",
]

[tool.bandit]
skips = ["B101"]
